--- a/validation/results/validate_d32.Rmd
+++ b/validation/results/validate_d32.Rmd
@@ -117,7 +117,7 @@ print(d3.2_m3rr2rc_nbar100_power_plot)
 ```{r nbar75}
 model.params.list[['nbar']] <- 75
 ```
-
+\newpage
 $\bar{n}$ = `r model.params.list[['nbar']]`
 
 ```{r 3f_nbar75}
@@ -168,7 +168,7 @@ model.params.list[['R2.1']] <- params.default[['R2.1']]
 ```{r r2206}
 model.params.list[['R2.2']] <- rep(0.6, M)  
 ```
-
+\newpage
 $R^2_2 =$ `r model.params.list[['R2.2']]`
 
 ```{r 3f_r2206}
@@ -194,7 +194,7 @@ model.params.list[['R2.2']] <- params.default[['R2.2']]
 model.params.list[['R2.1']] <- rep(0, M)  
 model.params.list[['R2.2']] <- rep(0, M)  
 ```
-
+\newpage
 $R^2_1 =$ `r model.params.list[['R2.1']]`
 $R^2_2 =$ `r model.params.list[['R2.2']]`
 
@@ -249,7 +249,7 @@ model.params.list[['rho.u0']] <- model.params.list[['rho.u1']] <- default.rho.ma
 model.params.list[['rho.w0']] <- model.params.list[['rho.w1']] <- default.rho.matrix
 model.params.list[['rho.r']] <- default.rho.matrix
 ```
-
+\newpage
 $\rho =$ `r model.params.list[['rho.default']]`
 
 ```{r 3f_rho08}
@@ -321,7 +321,7 @@ model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```{r ICC307}
 model.params.list[['ICC.3']] <- rep(0.7, M)
 ```
-
+\newpage
 $\text{ICC}_3$ = `r model.params.list[['ICC.3']]`
 
 ```{r 3r_ICC307}
@@ -362,7 +362,7 @@ model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```{r ICC30}
 model.params.list[['ICC.3']] <- rep(0, M)
 ```
-
+\newpage
 $\text{ICC}_2$ = `r model.params.list[['ICC.2']]`
 
 ```{r 3f_ICC30}
@@ -409,7 +409,7 @@ model.params.list[['K']] <- params.default[['K']]
 ```{r omega30}
 model.params.list[['omega.3']] <- rep(0, M)
 ```
-
+\newpage
 $\omega_3$ = `r model.params.list[['omega.3']]`
 $\text{ICC}_3$ = `r model.params.list[['ICC.3']]`
 
@@ -428,7 +428,7 @@ model.params.list[['omega.3']] <- rep(0.8, M)
 model.params.list[['ICC.3']] <- rep(0.7, M)
 model.params.list[['K']] <- 20
 ```
-
+\newpage
 $\omega_3$ = `r model.params.list[['omega.3']]`
 $\text{ICC}_3$ = `r model.params.list[['ICC.3']]`
 
@@ -445,38 +445,6 @@ model.params.list[['ICC.3']] <- params.default[['ICC.3']]
 model.params.list[['K']] <- params.default[['K']]
 ```
 
-
-\newpage
-## Kappa
-
-```{r kappa04}
-kappa <- 0.4
-kappa.matrix <- diag(kappa, M)
-model.params.list[['kappa.w']] <- model.params.list[['kappa.u']] <- kappa.matrix
-```
-
-$\kappa$ = `r kappa`
-
-```{r 3f_kappa04}
-d_m <- "d3.2_m3ff2rc"
-model.params.list[['omega.3']] <- NULL
-d3.2_m3ff2rc_kappa0.4_power_plot <-
-  gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.2_m3ff2rc_kappa0.4_power_plot)
-```
-
-```{r 3r_kappa04}
-d_m <- "d3.2_m3rr2rc"
-model.params.list[['omega.3']] <- params.default[['omega.3']]
-d3.2_m3rr2rc_kappa0.4_power_plot <-
-  gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.2_m3rr2rc_kappa0.4_power_plot)
-```
-
-```{r kappa04reset}
-model.params.list[['kappa.w']] <- model.params.list[['kappa.u']] <- params.default[['kappa.w']]
-```
-
 \newpage
 # MDES validation
 
@@ -485,6 +453,7 @@ model.params.list[['kappa.w']] <- model.params.list[['kappa.u']] <- params.defau
 model.params.list <- params.default 
 ```
 
+Target value: `r model.params.list[['MDES']][1]`
 
 ```{r 3f_mdes_D1}
 d_m <- "d3.2_m3ff2rc"
@@ -527,24 +496,7 @@ if(length(mdes.file) == 0)
 
 # Sample size validation
 
-```{r 3f_sampleD1_J}
-d_m <- "d3.2_m3ff2rc"
-model.params.list[['omega.3']] <- NULL
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-sample.file <- find_file(params.file.base, type = 'sample_J_D1indiv')
-if(length(sample.file) == 0)
-{
-  warning(paste('Results not yet computed for given parameters:', params.file.base))
-} else
-{
-  d3.2_m3ff2rc_sample_D1_J_results <- readRDS(sample.file)
-  pander::pandoc.table(
-    d3.2_m3ff2rc_sample_D1_J_results,
-    style = "grid", split.tables = 100, row.names = FALSE,
-    caption = d_m
-  )
-}
-```
+Target value: `r model.params.list[['K']]`
 
 ```{r 3f_sampleD1_K}
 d_m <- "d3.2_m3ff2rc"
@@ -565,6 +517,29 @@ if(length(sample.file) == 0)
 }
 ```
 
+Target value: `r model.params.list[['J']]`
+
+```{r 3f_sampleD1_J}
+d_m <- "d3.2_m3ff2rc"
+model.params.list[['omega.3']] <- NULL
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
+sample.file <- find_file(params.file.base, type = 'sample_J_D1indiv')
+if(length(sample.file) == 0)
+{
+  warning(paste('Results not yet computed for given parameters:', params.file.base))
+} else
+{
+  d3.2_m3ff2rc_sample_D1_J_results <- readRDS(sample.file)
+  pander::pandoc.table(
+    d3.2_m3ff2rc_sample_D1_J_results,
+    style = "grid", split.tables = 100, row.names = FALSE,
+    caption = d_m
+  )
+}
+```
+
+Target value: `r model.params.list[['nbar']]`
+
 ```{r 3f_sampleD1_nbar}
 d_m <- "d3.2_m3ff2rc"
 model.params.list[['omega.3']] <- NULL
@@ -584,26 +559,7 @@ if(length(sample.file) == 0)
 }
 ```
 
-
-
-```{r 3r_sampleD1_J}
-d_m <- "d3.2_m3rr2rc"
-model.params.list[['omega.3']] <- params.default[['omega.3']]
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-sample.file <- find_file(params.file.base, type = 'sample_J_D1indiv')
-if(length(sample.file) == 0)
-{
-  warning(paste('Results not yet computed for given parameters:', params.file.base))
-} else
-{
-  d3.2_m3rr2rc_sample_D1_J_results <- readRDS(sample.file)
-  pander::pandoc.table(
-    d3.2_m3rr2rc_sample_D1_J_results,
-    style = "grid", split.tables = 100, row.names = FALSE,
-    caption = d_m
-  )
-}
-```
+Target value: `r model.params.list[['K']]`
 
 ```{r 3r_sampleD1_K}
 d_m <- "d3.2_m3rr2rc"
@@ -624,6 +580,30 @@ if(length(sample.file) == 0)
 }
 ```
 
+Target value: `r model.params.list[['J']]`
+```{r 3r_sampleD1_J}
+d_m <- "d3.2_m3rr2rc"
+model.params.list[['omega.3']] <- params.default[['omega.3']]
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
+sample.file <- find_file(params.file.base, type = 'sample_J_D1indiv')
+if(length(sample.file) == 0)
+{
+  warning(paste('Results not yet computed for given parameters:', params.file.base))
+} else
+{
+  d3.2_m3rr2rc_sample_D1_J_results <- readRDS(sample.file)
+  pander::pandoc.table(
+    d3.2_m3rr2rc_sample_D1_J_results,
+    style = "grid", split.tables = 100, row.names = FALSE,
+    caption = d_m
+  )
+}
+```
+
+
+
+Target value: `r model.params.list[['nbar']]`
+
 ```{r 3r_sampleD1_nbar}
 d_m <- "d3.2_m3rr2rc"
 model.params.list[['omega.3']] <- params.default[['omega.3']]
@@ -641,4 +621,35 @@ if(length(sample.file) == 0)
     caption = d_m
   )
 }
+```
+
+
+```{r, results = 'hide', fig.width=5, fig.height=4}
+set.seed(343059)
+smp <- PUMP::pump_sample(
+  design = "d3.2_m3rr2rc",
+  MTP = 'BH',
+  typesample = 'nbar',
+  MDES = model.params.list[['MDES']],
+  M = model.params.list[['M']],
+  J = model.params.list[['J']],
+  K = model.params.list[['K']],
+  target.power = 0.233,
+  power.definition = 'D1indiv',
+  numCovar.1 = model.params.list[['numCovar.1']],
+  numCovar.2 = model.params.list[['numCovar.2']],
+  numCovar.3 = 1,
+  R2.1 = model.params.list[['R2.1']],
+  R2.2 = model.params.list[['R2.2']],
+  R2.3 = model.params.list[['R2.3']],
+  ICC.2 = model.params.list[['ICC.2']],
+  ICC.3 = model.params.list[['ICC.3']],
+  rho = model.params.list[['rho.default']],
+  omega.2 = model.params.list[['omega.2']],
+  omega.3 = model.params.list[['omega.3']],
+  Tbar = 0.5,
+  alpha = 0.05,
+  verbose = TRUE
+)
+plot_power_curve(smp)
 ```
