manuscript edits from KH

--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -10,6 +10,25 @@
     doi = {10.18637/jss.v067.i01},
 }
 
+@article{BenjaminiHochberg1995,
+   author = {Benjamini, Y., & Hochberg, Y.},
+   title = {Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing},
+   journal = {Journal of the Royal Statistical Society: Series B},
+   volume = {57},
+   issue  = {1},
+   pages = {289-300},
+   year = {1995}
+}
+@article{BenjaminiYekutieli2001,
+   author = {Benjamin, Y., & Yekutieli. D. },
+   title = {The Control of the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing under Dependency},
+   journal = {Annals of Statistics},
+   volume = {29},
+   pages = {1165-1188},
+   year = {2001}
+}
+
+
 @article{RN33089,
    author = {Bang, H., Jung, S., & George, S.L.},
    title = {Sample Size Calculation for Simulation-based Mulitple-testing Procedures},
