--- a/manuscript/PUMP_Manuscript.tex
+++ b/manuscript/PUMP_Manuscript.tex
@@ -4,8 +4,9 @@
 %
 \documentclass[
 ]{article}
-\title{PUMP: Estimating Power, MDES, and Sample Size with Multiple
-Outcomes}
+\title{Power Under Multiplicity Project (PUMP): Estimating Power,
+Minimum Detectable Effect Size and Sample Size When Adjusting for
+Multiple Outcomes}
 \author{}
 \date{\vspace{-2.5em}}
 
@@ -41,7 +42,7 @@ Outcomes}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={PUMP: Estimating Power, MDES, and Sample Size with Multiple Outcomes},
+  pdftitle={Power Under Multiplicity Project (PUMP): Estimating Power, Minimum Detectable Effect Size and Sample Size When Adjusting for Multiple Outcomes},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
